Remove DCHECK from xr_frame_provider

Replaces a flaky check in xr_frame_provider with an early return since
it's a valid state to be in, e.g. when exiting presentation.

Bug: 831243
Change-Id: Ie506095b5b5a1083ad669a000857a70b40f42a60
Reviewed-on: https://chromium-review.googlesource.com/1007622
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550051}
Former-commit-id: ca41be87c3a9f362068e03090916f969460800f7